# csci-711

./: .gitignore
raytracer/: CMakeLists.txt  Figure.c  Figure.h  Matrix.c  Matrix.h  README  Ray.c  Ray.h  Reflect.c  Reflect.h  Shader.c  Shader.h  Solid.c  Solid.h  Vector.c  Vector.h  alt-sdl-path.sh  main.c
website/: index.html
